# sysdig

./: CMakeLists.txt  CONTRIBUTING.md  FEATURES.md  README.md  azure-pipelines.yml  coding_conventions.md  test.js
.github/actions/install-zig/: action.yml
.github/workflows/: build-drivers.yaml  builder-update.yaml  ci-check.yaml  ci.yaml  release-draft.yaml  release-final.yaml  test.yaml
cmake/modules/: cares.cmake  driver.cmake  falcosecurity-libs.cmake  lua.patch  luajit.cmake  ncurses.cmake
cmake/modules/driver-repo/: CMakeLists.txt
cmake/modules/falcosecurity-libs-repo/: CMakeLists.txt  podman.patch
docker/builder/: Dockerfile  zig-c++  zig-cc
docker/sysdig/: Dockerfile
scripts/: CMakeLists.txt
scripts/driverkit/config/7.1.0+driver/aarch64/: alinux_4.19.67-16.al7.aarch64_1.yaml  alinux_4.19.81-17.2.al7.aarch64_1.yaml  alinux_4.19.91-0.41.git.67a612f5f.al8.aarch64_1.yaml  alinux_4.19.91-18.al7.aarch64_1.yaml  alinux_4.19.91-19.1.al7.aarch64_1.yaml  alinux_4.19.91-19.2.al7.aarch64_1.yaml  alinux_4.19.91-21.2.al7.aarch64_1.yaml  alinux_4.19.91-21.al7.aarch64_1.yaml  alinux_4.19.91-22.1.al7.aarch64_1.yaml  alinux_4.19.91-22.2.al7.aarch64_1.yaml  alinux_4.19.91-23.1.al7.aarch64_1.yaml  alinux_4.19.91-23.al7.aarch64_1.yaml  alinux_4.19.91-24.1.al7.aarch64_1.yaml  alinux_4.19.91-24.al7.aarch64_1.yaml  alinux_4.19.91-25.1.al7.aarch64_1.yaml  alinux_4.19.91-25.6.al7.aarch64_1.yaml  alinux_4.19.91-25.7.al7.aarch64_1.yaml  alinux_4.19.91-25.8.al7.aarch64_1.yaml  alinux_4.19.91-26.1.al7.aarch64_1.yaml  alinux_4.19.91-26.2.al7.aarch64_1.yaml  alinux_4.19.91-26.3.al7.aarch64_1.yaml  alinux_4.19.91-26.4.al7.aarch64_1.yaml  alinux_4.19.91-26.5.al7.aarch64_1.yaml  alinux_4.19.91-26.6.al7.aarch64_1.yaml  alinux_4.19.91-26.al7.aarch64_1.yaml  alinux_4.19.91-27.1.al7.aarch64_1.yaml  alinux_4.19.91-27.2.al7.aarch64_1.yaml  alinux_4.19.91-27.3.al7.aarch64_1.yaml  alinux_4.19.91-27.4.al7.aarch64_1.yaml  alinux_4.19.91-27.5.al7.aarch64_1.yaml  alinux_4.19.91-27.6.al7.aarch64_1.yaml  alinux_4.19.91-27.7.al7.aarch64_1.yaml  alinux_4.19.91-27.8.al7.aarch64_1.yaml  alinux_4.19.91-27.al7.aarch64_1.yaml  alinux_5.10.112-11.1.al8.aarch64_1.yaml  alinux_5.10.112-11.2.al8.aarch64_1.yaml  alinux_5.10.112-11.al8.aarch64_1.yaml  alinux_5.10.134-12.1.al8.aarch64_1.yaml  alinux_5.10.134-12.2.al8.aarch64_1.yaml  alinux_5.10.134-12.3.al8.aarch64_1.yaml  (+3556 more)
scripts/driverkit/config/7.1.0+driver/x86_64/: alinux_3.10.0-1062.1.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.1.2.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.12.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.18.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.4.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.4.2.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.4.3.al7.1.x86_64_1.yaml  alinux_3.10.0-1062.9.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.10.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.13.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.18.2.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.19.1.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.8.2.al7.1.x86_64_1.yaml  alinux_3.10.0-1127.al7.1.x86_64_1.yaml  alinux_3.10.0-1160.al7.1.x86_64_1.yaml  alinux_3.10.0-957.10.1.al7.1.x86_64_1.yaml  alinux_3.10.0-957.12.1.al7.1.x86_64_1.yaml  alinux_3.10.0-957.12.2.al7.1.x86_64_1.yaml  alinux_3.10.0-957.21.2.al7.1.x86_64_1.yaml  alinux_3.10.0-957.21.3.al7.1.x86_64_1.yaml  alinux_3.10.0-957.27.2.al7.1.x86_64_1.yaml  alinux_3.10.0-957.5.1.al7.3.x86_64_1.yaml  alinux_3.10.0-957.al7.2.x86_64_1.yaml  alinux_4.19.24-9.al7.x86_64_1.yaml  alinux_4.19.34-11.al7.x86_64_1.yaml  alinux_4.19.43-13.2.al7.x86_64_1.yaml  alinux_4.19.57-15.1.al7.x86_64_1.yaml  alinux_4.19.67-16.al7.x86_64_1.yaml  alinux_4.19.81-17.1.al7.x86_64_1.yaml  alinux_4.19.81-17.2.al7.x86_64_1.yaml  alinux_4.19.91-0.41.git.67a612f5f.al8.x86_64_1.yaml  alinux_4.19.91-18.al7.x86_64_1.yaml  alinux_4.19.91-19.1.al7.x86_64_1.yaml  alinux_4.19.91-19.2.al7.x86_64_1.yaml  alinux_4.19.91-21.2.al7.x86_64_1.yaml  alinux_4.19.91-21.al7.x86_64_1.yaml  alinux_4.19.91-22.1.al7.x86_64_1.yaml  alinux_4.19.91-22.2.al7.x86_64_1.yaml  alinux_4.19.91-23.1.al7.x86_64_1.yaml  alinux_4.19.91-23.al7.x86_64_1.yaml  (+8066 more)
scripts/driverkit/config/7.2.0+driver/aarch64/: alinux_4.19.67-16.al7.aarch64_1.yaml  alinux_4.19.81-17.2.al7.aarch64_1.yaml  alinux_4.19.91-0.41.git.67a612f5f.al8.aarch64_1.yaml  alinux_4.19.91-18.al7.aarch64_1.yaml  alinux_4.19.91-19.1.al7.aarch64_1.yaml  alinux_4.19.91-19.2.al7.aarch64_1.yaml  alinux_4.19.91-21.2.al7.aarch64_1.yaml  alinux_4.19.91-21.al7.aarch64_1.yaml  alinux_4.19.91-22.1.al7.aarch64_1.yaml  alinux_4.19.91-22.2.al7.aarch64_1.yaml  alinux_4.19.91-23.1.al7.aarch64_1.yaml  alinux_4.19.91-23.al7.aarch64_1.yaml  alinux_4.19.91-24.1.al7.aarch64_1.yaml  alinux_4.19.91-24.al7.aarch64_1.yaml  alinux_4.19.91-25.1.al7.aarch64_1.yaml  alinux_4.19.91-25.6.al7.aarch64_1.yaml  alinux_4.19.91-25.7.al7.aarch64_1.yaml  alinux_4.19.91-25.8.al7.aarch64_1.yaml  alinux_4.19.91-26.1.al7.aarch64_1.yaml  alinux_4.19.91-26.2.al7.aarch64_1.yaml  alinux_4.19.91-26.3.al7.aarch64_1.yaml  alinux_4.19.91-26.4.al7.aarch64_1.yaml  alinux_4.19.91-26.5.al7.aarch64_1.yaml  (+3647 more)
scripts/driverkit/utils/: scrape_and_generate
userspace/chisel/: chisel.cpp  chisel.h  chisel_api.cpp  chisel_api.h  chisel_capture_interrupt_exception.h  chisel_fields_info.cpp  chisel_fields_info.h  chisel_table.cpp  chisel_table.h  chisel_utils.cpp  chisel_utils.h  chisel_viewinfo.cpp  chisel_viewinfo.h
userspace/driver-loader/: CMakeLists.txt  go.sum  main.go
userspace/driver-loader/cmd/: root.go
userspace/driver-loader/cmd/driver/: driver_linux.go
userspace/driver-loader/internal/config/: config.go
userspace/sinspui/: ctext.cpp  ctext.h  cursescomponents.cpp  cursescomponents.h  cursesspectro.cpp  cursesspectro.h  cursestable.cpp  cursestable.h  cursesui.cpp  cursesui.h
userspace/sysdig/: CMakeLists.txt  csysdig.cpp  sysdig.cpp
userspace/sysdig/chisels/: wsysdig_summary.lua
userspace/sysdig/man/: csysdig.md  sysdig.md
userspace/sysdig/utils/: plugin_utils.cpp  plugin_utils.h  sinsp_opener.cpp  sinsp_opener.h  supported_events.h  supported_fields.cpp  supported_fields.h
(+34472 files in other folders)
